# text-editor

./: AUTO_COMPLETION_REMOVAL.md  COMPLETION_GUIDE.md  Cargo.toml  KEYWORD_ENHANCEMENT_SUMMARY.md  README.md  RUST_SNIPPETS.md  comprehensive_test.rs  final_test.rs  keyword_test.rs  test_completion.rs
src/: completion.rs  completion.rs.backup  handlers.rs  main.rs  settings.rs  syntax.rs  ui.rs  utils.rs
src/completion/: c_lang.rs  cpp_lang.rs  css_lang.rs  html_lang.rs  java_lang.rs  javascript_lang.rs  mod.rs  python_lang.rs  rust_lang.rs  ui.rs
