[package]
name = "basado-text-editor"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = "0.9.6"
glib = "0.20.9"
gdk4 = "0.9.6"
vte4 = "0.8"
home = "0.5"
mime_guess = "2.0"
gdk-pixbuf = "0.18"
sourceview5 = "0.9.1"  # For syntax highlighting and completion
once_cell = "1.21"  # For thread-safe lazy initialization
clap = { version = "4.0", features = ["derive"] }  # Command line argument parsing
regex = "1.0"  # For advanced text pattern matching in completion